--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body{
     justify-content: start;
     width: 50%;
     height: 100vh;
-    border: 3px;
+    /*border: 3px;*/
 }
 
 .instagram-phone{
@@ -33,8 +33,8 @@ body{
 }
 
 .instagram-phone img{
-    width: 20rem;
-    height: 20rem;
+    /*width: 20rem;*/
+    height: 50rem;
 }
 
 .instagram-content{
@@ -54,7 +54,7 @@ body{
     border: 1px solid lightgray;
     background-color: #ffff;
     width: 100%;
-    padding: 1.5rem 0;
+    padding: 1rem 0.5rem;
 
 }
 
@@ -76,7 +76,7 @@ body{
      padding: 5px 127px;
      background-color: lightskyblue;
      border-radius: 5px;
-     outline: none;
+     outline: none;   
 }
 .text{
     padding: 1rem;
@@ -96,6 +96,7 @@ body{
     align-items: center;
     justify-content: space-between;
     flex-direction: column;
+    padding: 1.5rem;
 }
 .Apps{
     display: flex;
